# Pet

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain
.github/ISSUE_TEMPLATE/: bug-report.md
Boot/: Makefile  README.md
Boot/Include/: BootData.h
Boot/Source/UEFI/: Main.c
Boot/UEFI/: README.md
Boot/UEFI/Core/: Cargo.toml
Boot/UEFI/Loader/: Cargo.toml
Boot/UEFI/Targets/: x86_64-UEFI.json  x86_64.json
Common/: README.md
Common/ELF/: ELF.h  ELF64.c  ELF64.h
Common/Standard/: string.c  string.h
Documents/Development/: Tools.md
ELF/: Cargo.toml
ELF/src/: lib.rs
Kernel/: Cargo.toml  Makefile
Kernel/Source/Shared/: Main.c
Kernel/Targets/: x86_64-unknown-none.json  x86_64.ld
Kernel/src/: main.rs
Kernel/src/arch/: mod.rs
Scripts/: BuildAll.bat  BuildAll.sh  BuildCrossTools.sh  Clippy.bat  Clippy.sh  MakeImage.sh
Shared/: README.md
Shared/Arch/x86/: Cargo.toml
Shared/Arch/x86_64/: Cargo.toml
Shared/BitOperations/: Cargo.toml
Shared/BitOperations/src/: lib.rs
Shared/ELF/src/: error.rs  header.rs  identity.rs  lib.rs  macros.rs  program.rs  section.rs
Shared/IO/: Cargo.toml
Shared/IO/src/: cursor.rs  endian.rs  lib.rs
Shared/UART8250Family/: Cargo.toml
Shared/UART8250Family/src/: lib.rs
boot/uefi/: README.md
boot/uefi/core/: Cargo.toml
boot/uefi/core/src/: configuration.rs  error.rs  graphics.rs  lib.rs  memory.rs  protocol.rs  string.rs  system.rs
boot/uefi/core/src/ffi/: boot.rs  configuration.rs  device_path.rs  file.rs  graphics_output.rs  loaded_image.rs  mod.rs  primitives.rs  runtime.rs  sfs.rs  simple_file_system.rs  simple_text_input.rs  simple_text_output.rs  system.rs  text_io.rs
boot/uefi/core/src/io/: console.rs  mod.rs  storage.rs
boot/uefi/core/src/memory/: allocator.rs  map.rs  mod.rs  pages.rs
boot/uefi/loader/: Cargo.toml
boot/uefi/targets/: x86_64-uefi.json
boot_apps/: README.md
boot_apps/loader/: Cargo.toml
boot_apps/loader/src/: kernel_prep.rs  main.rs
kernel/: Cargo.toml
kernel/src/: acpi_interface.rs  frame.rs  heap.rs  icm.rs  main.rs  pmm.rs  spinlock.rs  tm.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: debug.rs  gdt.rs  ic.rs  idt.rs  interrupt_controller.rs  local_apic.rs  mod.rs  sync.rs  timing.rs  tm.rs  tss.rs  vmm.rs
kernel/src/arch/x86_64/drivers/ic/: io_apic.rs  mod.rs
kernel/src/arch/x86_64/drivers/timers/: apic.rs  hpet.rs  mod.rs  tsc.rs
kernel/src/arch/x86_64/idt/: arch.rs  mod.rs  stack_frame.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/ic/: mod.rs
kernel/src/drivers/timers/: mod.rs
kernel/src/memory/: allocator.rs  frame.rs  manager.rs  mod.rs  physical.rs  physical_manager.rs
kernel/src/tasks/: mod.rs  scheduler.rs  task.rs
kernel/targets/: x86_64-unknown-none.json  x86_64.ld
libraries/: README.md
libraries/acpi/: Cargo.toml
libraries/acpi/src/: gas.rs  hpet.rs  lib.rs  root_entry.rs  rsdp.rs  rsdt.rs  xsdt.rs
libraries/arch/x86/: Cargo.toml
libraries/bits/: Cargo.toml
libraries/bits/src/: flags_macro.rs
libraries/elf/: Cargo.toml
libraries/enums/: Cargo.toml
libraries/hpet/: Cargo.toml
libraries/kernel_interface/: Cargo.toml
libraries/memory/: Cargo.toml
libraries/split/: Cargo.toml
libraries/uart_8250_family/: Cargo.toml
libraries/uefi/: Cargo.toml
libraries/units/: Cargo.toml
scripts/: build_all.bat  build_all.ps1  build_all.sh  clippy.bat  clippy.ps1  clippy.sh  make_image.sh
shared/: README.md
shared/acpi/: Cargo.toml
shared/bits/: Cargo.toml
shared/elf/: Cargo.toml
shared/encapsulation/: Cargo.toml
shared/enums/: Cargo.toml
shared/generation/: Cargo.toml
shared/io/: Cargo.toml
shared/memory/: Cargo.toml
shared/newtypes/: Cargo.toml
shared/uart_8250_family/: Cargo.toml
shared/uart_8250_family/src/: error.rs  lib.rs  registers.rs  serial_port.rs  settings.rs
shared/uart_8250_family/src/registers/: fifo_control.rs  interrupt_enable.rs  interrupt_id.rs  line_control.rs  line_status.rs  modem_control.rs  modem_status.rs
shared/ucs2/: Cargo.toml
(+278 files in other folders)
