[workspace]

members = [
    "boot/uefi/core",
    "boot/uefi/loader",
    "kernel",
    "shared/elf",
    "shared/enums",
    "shared/memory",
    "shared/kernel/init",
    "shared/arch/x86",
    "shared/bits",
    "shared/acpi",
    "shared/io",
    "shared/ucs2",
    "shared/split",
    "shared/uart_8250_family"
]