[workspace]

members = [
    "boot_apps/loader",
    "kernel",
    "libraries/elf",
    "libraries/enums",
    "libraries/memory",
    "libraries/kernel/init",
    "libraries/arch/x86",
    "libraries/bits",
    "libraries/acpi",
    "libraries/io",
    "libraries/ucs2",
    "libraries/split",
    "libraries/uart_8250_family",
    "libraries/uefi",
    "libraries/units",
]