[workspace]

members = [
    "boot_apps/loader",
    "kernel",
    "libraries/elf",
    "libraries/enums",
    "libraries/memory",
    "libraries/kernel_interface",
    "libraries/arch/x86",
    "libraries/acpi",
    "libraries/io",
    "libraries/ucs2",
    "libraries/uart_8250_family",
    "libraries/uefi",
    "libraries/units",
]