[package]
name = "kernel"
version = "0.1.0"
authors = ["Todd Berta-Oldham <16536474+ToddBertaOldham@users.noreply.github.com>"]
edition = "2018"

[dependencies]
kernel_init = { path = "../shared/kernel/init/" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = { path = "../shared/arch/x86" }
uart_8250_family = { path = "../shared/uart_8250_family/" }