[package]
name = "uart_8250_family"
version = "0.1.0"
authors = ["Todd <16536474+ToddBertaOldham@users.noreply.github.com>"]
edition = "2018"

[dependencies]
x86 = { path = "../arch/x86/" }
io = { path = "../io" }
bits = { path = "../bits" }
generation = { path = "../generation" }
encapsulation = { path = "../encapsulation" }