[package]
name = "uefi_core"
version = "0.1.0"
authors = ["Todd Berta-Oldham <16536474+ToddBertaOldham@users.noreply.github.com>"]
edition = "2018"

[dependencies]
newtypes = { path = "../../../shared/newtypes" }
ucs2 = { path = "../../../shared/ucs2" }
io = { path = "../../../shared/io", features = [ "alloc-impl" ] }
encapsulation = { path = "../../../shared/encapsulation" }