[package]
name = "uefi_core"
version = "0.1.0"
authors = ["Aurora Berta-Oldham"]
edition = "2018"

[dependencies]
enums = { path = "../../../shared/enums" }
bits = { path = "../../../shared/bits" }
ucs2 = { path = "../../../shared/ucs2" }
io = { path = "../../../shared/io", features = [ "no-std", "alloc-impl" ] }
memory = { path = "../../../shared/memory/" }
acpi = { path = "../../../shared/acpi" }
